# re2-modification

./: .gitignore  CMakeLists.txt  LICENSE  README.md  automata.cpp  automata.h  binary_tree.cpp  binary_tree.h  build.sh  edge.h  log.txt  main.cpp  match.cpp  match_mfa.cpp  matcher.py  mfa.cpp  node.h  parser.cpp  regex.cpp  regex.h  run.sh  run_all.sh  start.sh  test.h  test_inputs.txt  test_regex.cpp  variable.h
bt/: binary_tree.cpp  binary_tree.h  bt_glushkov.cpp  bt_mfa.cpp  bt_ssnf.cpp  bt_thomson.cpp
matchers/: example_runner.cpp  match.cpp  match_mfa.cpp
python_re/: matcher.py
regex/: bnf.cpp  helpers.cpp  parser.cpp  regex.cpp  regex.h  reverse.cpp
test/: bnf_examples.txt  examples.cpp  test_bnf.cpp  test_bnf_inputs.txt
test/example_1/: diploma_results.txt  input_strings.txt  regexp.txt
test/example_10/: input_strings.txt  pump.txt  regexp.txt
test/example_11/: pump.txt  regexp.txt
test/example_12/: regexp.txt
test/example_13/: pump.txt  regexp.txt
test/example_14/: pump.txt  regexp.txt
test/example_15/: pump.txt  regexp.txt
test/example_16/: pump.txt  regexp.txt
test/example_17/: regexp.txt
test/example_2/: diploma_results.txt  input_strings.txt  pump.txt  python_results.txt  regexp.txt
test/example_3/: diploma_results.txt  input_strings.txt  pump.txt  python_results.txt  regexp.txt
test/example_4/: diploma_results.txt  input_strings.txt  python_results.txt  regexp.txt
test/example_5/: diploma_results.txt  input_strings.txt  python_results.txt  regexp.txt
test/example_6/: input_strings.txt  pump.txt  regexp.txt
test/example_7/: input_strings.txt  pump.txt  regexp.txt
test/example_8/: input_strings.txt  pump.txt  regexp.txt
test/example_9/: input_strings.txt  pump.txt  regexp.txt
